log_output/manifests/deployment-log_output_app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: log-output-app-dep
  namespace: exercises
spec:
  replicas: 1
  selector:
    matchLabels:
      app: log-output-app
  template:
    metadata:
      labels:
        app: log-output-app
    spec:
      containers:
        - name: log-output-app
          image: inosha1/log_output_app:v3
          imagePullPolicy: Always
          ports:
            - containerPort: 3001
