log_output/manifests/deployment-ping-pong.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ping-pong-app-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ping-pong-app
  template:
    metadata:
      labels:
        app: ping-pong-app
    spec:
      containers:
        - name: ping-pong-app
          image: inosha1/ping-pong:v4
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
