log_output/manifests/deployment-pingpong.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pingpong-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pingpong
  template:
    metadata:
      labels:
        app: pingpong
    spec:
      volumes:
        - name: log-pv
          persistentVolumeClaim:
            claimName: log-pvc
      containers:
        - name: pingpong
          image: inosha1/ping-pong:v3
          imagePullPolicy: Always
          ports:
            - containerPort: 3001
          volumeMounts:
            - name: log-pv
              mountPath: /logs
