log_output/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pingpong-svc
spec:
  selector:
    app: pingpong
  ports:
    - protocol: TCP
      port: 2345
      targetPort: 3000
