log_output/manifests/routes.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: log-output-ping-pong-route
  namespace: exercises
spec:
  parentRefs:
    - name: log-output-ping-pong-gateway
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: "/pings"
      backendRefs:
        - name: ping-pong-app-svc
          port: 80
    - matches:
        - path:
            type: PathPrefix
            value: "/pingpong"
            filters:
            - type: URLRewrite
              urlRewrite:
                replacePrefixMatch: "/" 
      backendRefs:
        - name: ping-pong-app-svc
          port: 80
